--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.7",
     "feather-icons": "^4.29.0",
     "framer-motion": "^7.8.0",
     "react": "^18.2.0",
