--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.7",
+    "axios": "^1.2.1",
     "feather-icons": "^4.29.0",
     "framer-motion": "^7.8.0",
     "react": "^18.2.0",
