--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.1",
     "feather-icons": "^4.29.0",
     "framer-motion": "^7.8.0",
+    "netlify-cli": "^12.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.2",
